--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Oct 08 2020 11:19:56 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 07:03:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -103,7 +103,7 @@
     }
   ]
 }</script></a></div>
-        <div data-w-id="6d4c4f45-25e0-28e9-7ddd-291ea3e23c37" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_4_block"><a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+        <div data-w-id="6d4c4f45-25e0-28e9-7ddd-291ea3e23c37" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_4_block"><a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
@@ -117,7 +117,7 @@
     }
   ]
 }</script></a></div>
-        <div data-w-id="de84c0e4-ec70-3f60-4b12-ddf9380fb606" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_4_block"><a href="#" class="lightbox-link-2 w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+        <div data-w-id="de84c0e4-ec70-3f60-4b12-ddf9380fb606" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_4_block"><a href="#" class="lightbox-link-2 w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
@@ -360,8 +360,8 @@
   <div class="footer_section">
     <div class="ends_container">
       <div class="_4_block_row">
-        <div class="_4_block"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" alt="" class="image-2"></div>
-        <div class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" alt="" class="image-2"></div>
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
@@ -378,7 +378,7 @@
             </ul>
           </div>
         </div>
-        <div class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list w-list-unstyled">
@@ -392,7 +392,7 @@
             </ul>
           </div>
         </div>
-        <div class="_4_block">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list-2 w-list-unstyled">
