Added terms section from my site, need to edit it, plugged in disclaimer para in footer and corrected some improper designations for headings

--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Oct 09 2020 07:03:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 11:43:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -35,7 +35,7 @@
           <div class="services_mask_left"></div>
         </div>
         <div data-w-id="76b6cc94-f91a-84b4-4f11-d84595d36d22" class="_2_block_middle">
-          <h3 class="ailment_h3">MUSCOSKELETAL</h3>
+          <h2 class="ailment_h2">MUSCOSKELETAL</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -79,7 +79,7 @@
       </div>
       <div class="_2_block_row_ailment_left">
         <div data-w-id="eb1ed7bc-190b-48e1-fd41-5e515a747e1b" class="_2_block_middle">
-          <h3 class="ailment_h3">NEUROLOGICAL</h3>
+          <h2 class="ailment_h2">NEUROLOGICAL</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -117,7 +117,7 @@
           <div class="services_mask_left"></div>
         </div>
         <div data-w-id="3f13880f-9a22-97f0-e941-fa6804f64eaf" class="_2_block_middle">
-          <h3 class="ailment_h3">CHRONIC CONDITIONS</h3>
+          <h2 class="ailment_h2">CHRONIC CONDITIONS</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -149,7 +149,7 @@
       </div>
       <div class="_2_block_row_ailment_left">
         <div data-w-id="7411f70d-e494-01e7-91ab-36de3a17d7b3" class="_2_block_middle">
-          <h3 class="ailment_h3">EYE, EAR, NOSE, THROAT</h3>
+          <h2 class="ailment_h2">EYE, EAR, NOSE, THROAT</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -186,7 +186,7 @@
           <div class="services_mask_left"></div>
         </div>
         <div data-w-id="9b1f5a2a-ed51-7699-b2af-688314549fa5" class="_2_block_middle">
-          <h3 class="ailment_h3">GYNECOLOGICAL, GENITOURINARY, REPRODUCTIVE</h3>
+          <h2 class="ailment_h2">GYNECOLOGICAL, GENITOURINARY, REPRODUCTIVE</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -223,7 +223,7 @@
       </div>
       <div class="_2_block_row_ailment_left">
         <div data-w-id="70a9b4c3-b5bc-77d3-a4ba-b3ac01adba89" class="_2_block_middle">
-          <h3 class="ailment_h3">RESPIRATORY</h3>
+          <h2 class="ailment_h2">RESPIRATORY</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -255,7 +255,7 @@
           <div class="services_mask_left"></div>
         </div>
         <div data-w-id="f1c027e4-f2e9-fb2a-3be1-bf36dddbf477" class="_2_block_middle">
-          <h3 class="ailment_h3">EMOTIONAL, PHYSCOLOGICAL</h3>
+          <h2 class="ailment_h2">EMOTIONAL, PHYSCOLOGICAL</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -282,7 +282,7 @@
       </div>
       <div class="_2_block_row_ailment_left">
         <div data-w-id="6dc837dc-4253-b941-a880-36ff3015d8f5" class="_2_block_middle">
-          <h3 class="ailment_h3">GASTROINTESTINAL</h3>
+          <h2 class="ailment_h2">GASTROINTESTINAL</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -323,7 +323,7 @@
           <div class="services_mask_left"></div>
         </div>
         <div data-w-id="e26afd64-61e7-2704-ca32-4cbb2e467e38" class="_2_block_middle">
-          <h3 class="ailment_h3">AUTOIMMUNE DISORDERS</h3>
+          <h2 class="ailment_h2">AUTOIMMUNE DISORDERS</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -347,7 +347,7 @@
       </div>
       <div class="_2_block_row_ailment_left">
         <div data-w-id="9872ed99-3653-d1a9-135d-d812dc4978a5" class="_2_block_middle">
-          <h3 class="ailment_h3">UROLOGICAL</h3>
+          <h2 class="ailment_h2">UROLOGICAL</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -375,7 +375,7 @@
           <div class="services_mask_left"></div>
         </div>
         <div data-w-id="49e9c1d3-394c-7ed7-d474-b9afbc805ad2" class="_2_block_middle">
-          <h3 class="ailment_h3">IMMUNE SYSTEM</h3>
+          <h2 class="ailment_h2">IMMUNE SYSTEM</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -400,7 +400,7 @@
       </div>
       <div class="_2_block_row_ailment_left">
         <div data-w-id="e40ba680-94d4-da68-25c0-56f781abe34d" class="_2_block_middle">
-          <h3 class="ailment_h3">DERMATOLOGICAL</h3>
+          <h2 class="ailment_h2">DERMATOLOGICAL</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -428,7 +428,7 @@
           <div class="services_mask_left"></div>
         </div>
         <div data-w-id="a2be8839-e5b1-78d2-8ed1-8ca6a5d3dbd6" class="_2_block_middle">
-          <h3 class="ailment_h3">CIRCULATORY</h3>
+          <h2 class="ailment_h2">CIRCULATORY</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -450,7 +450,7 @@
       </div>
       <div class="_2_block_row_ailment_left">
         <div data-w-id="2f4ecaa3-bbbb-4c3f-cfcb-1dff6a6ffa3e" class="_2_block_middle">
-          <h3 class="ailment_h3">ADDICTION</h3>
+          <h2 class="ailment_h2">ADDICTION</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -479,7 +479,9 @@
   <div class="footer_section">
     <div class="ends_container">
       <div class="_4_block_row">
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" alt="" class="image-2"></div>
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" alt="" class="image-2">
+          <p class="disclaimer_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
