--- a/team.html
+++ b/team.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Oct 09 2020 07:03:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 11:43:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,7 @@
       <h1 class="section_h1">Meet Our Team</h1>
       <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <h2 class="section_h2">Dr. Jay Ryu, L.Ac., Ph.D</h2>
-      <h4 class="ryu_h4">Founder and chief practitioner of Ryu Acupuncture Clinic, Inc. He has been been providing world-class care to patients across Southern California for 23+ years with superior results. More info, more info, more info, more info, more info, more info.</h4>
+      <h3 class="ryu_h3">Founder and chief practitioner of Ryu Acupuncture Clinic, Inc. He has been been providing world-class care to patients across Southern California for 23+ years with superior results. More info, more info, more info, more info, more info, more info.</h3>
       <div class="_2_block_row">
         <div class="_45_block margin_right">
           <p class="bio_para">Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean.  Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
@@ -42,7 +42,7 @@
         <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671497c" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 767px) 90vw, (max-width: 991px) 28vw, 32vw" alt="" class="image"></div>
         <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671497e" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
           <h2 class="section_h2_left">Veronica Ryu, L.Ac.</h2>
-          <h4 class="ryu_h4">Specialties:</h4>
+          <h3 class="ryu_h3">Specialties:</h3>
           <p class="bio_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
       </div>
@@ -50,7 +50,7 @@
         <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea6714999" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 767px) 90vw, (max-width: 991px) 28vw, 32vw" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="70f7b243-a42b-5465-f4ce-2bbea671499a" alt=""></div>
         <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671498c" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
           <h2 class="section_h2_left">Jennifer Ryu, L.Ac.</h2>
-          <h4 class="ryu_h4">Specialties:</h4>
+          <h3 class="ryu_h3">Specialties:</h3>
           <p class="bio_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
       </div>
@@ -59,7 +59,9 @@
   <div class="footer_section">
     <div class="ends_container">
       <div class="_4_block_row">
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" alt="" class="image-2"></div>
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" alt="" class="image-2">
+          <p class="disclaimer_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
