--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Oct 09 2020 11:43:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 20:28:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7712dd7241dd614edcf62e" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -31,35 +31,35 @@
       <p class="legal_timestamp"><strong>Last updated September 13, 2020</strong></p>
       <h2 class="legal_h2">TABLE OF CONTENTS</h2>
       <ol role="list">
-        <li><a href="#" class="blue_link">AGREEMENT TO TERMS</a></li>
-        <li><a href="#" class="blue_link">INTELLECTUAL PROPERTY RIGHTS</a></li>
-        <li><a href="#" class="blue_link">USER REPRESENTATIONS</a></li>
-        <li><a href="#" class="blue_link">PROHIBITED ACTIVITIES</a></li>
-        <li><a href="#" class="blue_link">USER GENERATED CONTRIBUTIONS</a></li>
-        <li><a href="#" class="blue_link">CONTRIBUTION LICENSE</a></li>
-        <li><a href="#" class="blue_link">SUBMISSIONS</a></li>
-        <li><a href="#" class="blue_link">THIRD-PARTY WEBSITE AND CONTENT</a></li>
-        <li><a href="#" class="blue_link">SITE MANAGEMENT</a></li>
-        <li><a href="#" class="blue_link">PRIVACY POLICY</a></li>
-        <li><a href="#" class="blue_link">TERM AND TERMINATION</a></li>
-        <li><a href="#" class="blue_link">MODIFICATIONS AND INTERRUPTIONS</a></li>
-        <li><a href="#" class="blue_link">GOVERNING LAW</a></li>
-        <li><a href="#" class="blue_link">DISPUTE RESOLUTION</a></li>
-        <li><a href="#" class="blue_link">CORRECTIONS</a></li>
-        <li><a href="#" class="blue_link">DISCLAIMER</a></li>
-        <li><a href="#" class="blue_link">LIMITATIONS OF LIABILITY</a></li>
-        <li><a href="#" class="blue_link">INDEMNIFICATION</a></li>
-        <li><a href="#" class="blue_link">USER DATA</a></li>
-        <li><a href="#" class="blue_link">ELECTRONIC COMMUNICATIONS, TRANSACTIONS AND SIGNATURES</a></li>
-        <li><a href="#" class="blue_link">MISCELLANEOUS</a></li>
-        <li><a href="#" class="blue_link">CONTACT US</a></li>
+        <li><a href="#tou_section_1" class="blue_link">AGREEMENT TO TERMS</a></li>
+        <li><a href="#tou_section_2" class="blue_link">INTELLECTUAL PROPERTY RIGHTS</a></li>
+        <li><a href="#tou_section_3" class="blue_link">USER REPRESENTATIONS</a></li>
+        <li><a href="#tou_section_4" class="blue_link">PROHIBITED ACTIVITIES</a></li>
+        <li><a href="#tou_section_5" class="blue_link">USER GENERATED CONTRIBUTIONS</a></li>
+        <li><a href="#tou_section_6" class="blue_link">CONTRIBUTION LICENSE</a></li>
+        <li><a href="#tou_section_7" class="blue_link">SUBMISSIONS</a></li>
+        <li><a href="#tou_section_8" class="blue_link">THIRD-PARTY WEBSITE AND CONTENT</a></li>
+        <li><a href="#tou_section_9" class="blue_link">SITE MANAGEMENT</a></li>
+        <li><a href="#tou_section_10" class="blue_link">PRIVACY POLICY</a></li>
+        <li><a href="#tou_section_11" class="blue_link">TERM AND TERMINATION</a></li>
+        <li><a href="#tou_section_12" class="blue_link">MODIFICATIONS AND INTERRUPTIONS</a></li>
+        <li><a href="#tou_section_13" class="blue_link">GOVERNING LAW</a></li>
+        <li><a href="#tou_section_14" class="blue_link">DISPUTE RESOLUTION</a></li>
+        <li><a href="#tou_section_15" class="blue_link">CORRECTIONS</a></li>
+        <li><a href="#tou_section_16" class="blue_link">DISCLAIMER</a></li>
+        <li><a href="#tou_section_17" class="blue_link">LIMITATIONS OF LIABILITY</a></li>
+        <li><a href="#tou_section_18" class="blue_link">INDEMNIFICATION</a></li>
+        <li><a href="#tou_section_19" class="blue_link">USER DATA</a></li>
+        <li><a href="#tou_section_20" class="blue_link">ELECTRONIC COMMUNICATIONS, TRANSACTIONS AND SIGNATURES</a></li>
+        <li><a href="#tou_section_21" class="blue_link">MISCELLANEOUS</a></li>
+        <li><a href="#tou_section_22" class="blue_link">CONTACT US</a></li>
       </ol>
     </div>
   </div>
   <div id="tou_section_1" class="tou_section_1">
     <div class="main_container">
       <h2 class="legal_h2">1. AGREEMENT TO TERMS</h2>
-      <p class="legal_para">These Terms of Use constitute a legally binding agreement made between you, whether personally or on behalf of an entity (“you”) and JohnBarrett.io (&quot;<strong>Company</strong>&quot;, “<strong>we</strong>”, “<strong>us</strong>”, or “<strong>our</strong>”), concerning your access to and use of the <a href="http://www.johnbarrett.io/" target="_blank" class="blue_link">http://www.johnbarrett.io</a> website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the “Site”). You agree that by accessing the Site, you have read, understood, and agreed to be bound by all of these Terms of Use. IF YOU DO NOT AGREE WITH ALL OF THESE TERMS OF USE, THEN YOU ARE EXPRESSLY PROHIBITED FROM USING THE SITE AND YOU MUST DISCONTINUE USE IMMEDIATELY.<br>‍<br>Supplemental terms and conditions or documents that may be posted on the Site from time to time are hereby expressly incorporated herein by reference. We reserve the right, in our sole discretion, to make changes or modifications to these Terms of Use at any time and for any reason. We will alert you about any changes by updating the “Last updated” date of these Terms of Use and you waive any right to receive specific notice of each such change. It is your responsibility to periodically review these Terms of Use to stay informed of updates. You will be subject to, and will be deemed to have been made aware of and to have accepted, the changes in any revised Terms of Use by your continued use of the Site after the date such revised Terms of Use are posted.<br><br>The information provided on the Site is not intended for distribution to or use by any person or entity in any jurisdiction or country where such distribution or use would be contrary to law or regulation or which would subject us to any registration requirement within such jurisdiction or country. Accordingly, those persons who choose to access the Site from other locations do so on their own initiative and are solely responsible for compliance with local laws, if and to the extent local laws are applicable.<br><br>The Site is intended for users who are at least 18 years old. Persons under the age of 18 are not permitted to use or register for the Site. </p>
+      <p class="legal_para">These Terms of Use constitute a legally binding agreement made between you, whether personally or on behalf of an entity (“you”) and JohnBarrett.io (&quot;<strong>Company</strong>&quot;, “<strong>we</strong>”, “<strong>us</strong>”, or “<strong>our</strong>”), concerning your access to and use of the <a href="https://www.ryuacupuncture.com" target="_blank" class="blue_link">https://www.ryuacupuncture.com</a> website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the “Site”). You agree that by accessing the Site, you have read, understood, and agreed to be bound by all of these Terms of Use. IF YOU DO NOT AGREE WITH ALL OF THESE TERMS OF USE, THEN YOU ARE EXPRESSLY PROHIBITED FROM USING THE SITE AND YOU MUST DISCONTINUE USE IMMEDIATELY.<br>‍<br>Supplemental terms and conditions or documents that may be posted on the Site from time to time are hereby expressly incorporated herein by reference. We reserve the right, in our sole discretion, to make changes or modifications to these Terms of Use at any time and for any reason. We will alert you about any changes by updating the “Last updated” date of these Terms of Use and you waive any right to receive specific notice of each such change. It is your responsibility to periodically review these Terms of Use to stay informed of updates. You will be subject to, and will be deemed to have been made aware of and to have accepted, the changes in any revised Terms of Use by your continued use of the Site after the date such revised Terms of Use are posted.<br><br>The information provided on the Site is not intended for distribution to or use by any person or entity in any jurisdiction or country where such distribution or use would be contrary to law or regulation or which would subject us to any registration requirement within such jurisdiction or country. Accordingly, those persons who choose to access the Site from other locations do so on their own initiative and are solely responsible for compliance with local laws, if and to the extent local laws are applicable.<br><br>The Site is intended for users who are at least 18 years old. Persons under the age of 18 are not permitted to use or register for the Site. </p>
     </div>
   </div>
   <div id="tou_section_2" class="tou_section_2">
@@ -156,7 +156,7 @@
   <div id="tou_section_10" class="tou_section_10">
     <div class="main_container">
       <h2 class="legal_h2">10. PRIVACY POLICY</h2>
-      <p class="legal_para">We care about data privacy and security. Please review our Privacy Policy: <a href="#" class="blue_link">https://www.johnbarrett.io/privacy</a>.<br><br>By using the Site, you agree to be bound by our Privacy Policy, which is incorporated into these Terms of Use. Please be advised the Site is hosted in the United States. If you access the Site from any other region of the world with laws or other requirements governing personal data collection, use, or disclosure that differ from applicable laws in the United States, then through your continued use of the Site, you are transferring your data to the United States, and you agree to have your data transferred to and processed in the United States.</p>
+      <p class="legal_para">We care about data privacy and security. Please review our Privacy Policy: <a href="privacy.html" class="blue_link">https://www.ryuacupuncture.com/privacy</a>.<br><br>By using the Site, you agree to be bound by our Privacy Policy, which is incorporated into these Terms of Use. Please be advised the Site is hosted in the United States. If you access the Site from any other region of the world with laws or other requirements governing personal data collection, use, or disclosure that differ from applicable laws in the United States, then through your continued use of the Site, you are transferring your data to the United States, and you agree to have your data transferred to and processed in the United States.</p>
     </div>
   </div>
   <div id="tou_section_11" class="tou_section_11">
