--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Oct 09 2020 20:28:54 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 19 2020 06:14:59 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f75a0efe24b373e47ab1ed5" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -188,13 +188,13 @@
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list w-list-unstyled">
-              <li class="list-item">Mon: 9:30AM - 6:00PM</li>
-              <li class="list-item-2">Tue: Closed</li>
-              <li class="list-item-3">Wed: 9:30AM - 6:00PM</li>
-              <li class="list-item-8">Thu: Closed</li>
-              <li class="list-item-9">Fri: 9:30AM - 6:00PM</li>
-              <li class="list-item-10">Sat: 9:00AM - 1:30PM</li>
-              <li class="list-item-11">Sun: Closed</li>
+              <li class="footer_hours">Mon: 9:30AM - 6:00PM</li>
+              <li class="footer_hours">Tue: Closed</li>
+              <li class="footer_hours">Wed: 9:30AM - 6:00PM</li>
+              <li class="footer_hours">Thu: Closed</li>
+              <li class="footer_hours">Fri: 9:30AM - 6:00PM</li>
+              <li class="footer_hours">Sat: 9:00AM - 1:30PM</li>
+              <li class="footer_hours">Sun: Closed</li>
             </ul>
           </div>
         </div>
@@ -202,20 +202,20 @@
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list-2 w-list-unstyled">
-              <li><a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr. #510</a></li>
-              <li class="list-item-4">Burbank, CA 91505</li>
-              <li class="list-item-5">Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
-              <li class="list-item-6">Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
-              <li class="list-item-7">Fax: <a href="tel:8188419092" class="footer_link">(818) 841-9092</a></li>
-              <li class="footer_link-2"><a href="mailto:ryuacupuncture@yahoo.com" class="footer_link">ryuacupuncture@yahoo.com</a></li>
-              <li class="footer_list_item"><a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a><a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
+              <li class="footer_link"><a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr. #510</a></li>
+              <li class="footer_link">Burbank, CA 91505</li>
+              <li class="footer_link">Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
+              <li class="footer_link">Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
+              <li class="footer_link">Fax: <a href="tel:8188419092" class="footer_link">(818) 841-9092</a></li>
+              <li class="footer_link"><a href="mailto:ryuacupuncture@yahoo.com" class="footer_link">ryuacupuncture@yahoo.com</a></li>
+              <li class="footer_icons"><a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a><a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
             </ul>
           </div>
         </div>
       </div>
     </div>
     <div class="legal_block">
-      <div class="text-block-2">© 2020 Ryu Acupuncture Clinic, Inc - All rights reserved.</div>
+      <div class="legal_text">© 2020 Ryu Acupuncture Clinic, Inc - All rights reserved.</div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f686908b6be43eb4fb09bd7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
